--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -59,13 +59,31 @@
     </section> -->
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exciting tours for adventure people
                 </h2>
             </div>
             <div class="row">
-                <div class="col-1-of-2">text</div>
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        You're going to fall in love with nature
+                    </h3>
+                    <p class="paragraph">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium incidunt temporibus pariatur, nemo praesentium ad! Ratione
+                        quia excepturi cupiditate possimus repellat dolorem et soluta quo? Laudantium voluptates sequi nobis
+                        voluptatem.
+                    </p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Live adventures like you never have before
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti earum sit velit adipisci nesciunt, vitae beatae aperiam
+                        similique autem ratione modi officiis expedita temporibus voluptates vel facilis perspiciatis veniam
+                        itaque.
+                    </p>
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
+                </div>
                 <div class="col-1-of-2">images</div>
             </div>
         </section>
