--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -235,6 +235,27 @@
                     <a href="#" class="btn btn--green">Discover all tours</a>
                 </div>
         </section>
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    we make people genuinely happy
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="headig-tertiary u-margin-bottom-small">I had the best week with my family</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, nemo eaque. Temporibus asperiores maxime dicta? Sapiente
+                            ad provident quisquam quam, optio perspiciatis similique quas. Ab aspernatur qui earum sint necessitatibus.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
