--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -245,6 +245,9 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            Marry Smith
+                        </figcaption>
                     </figure>
                     <div class="story__text">
                         <h3 class="headig-tertiary u-margin-bottom-small">I had the best week with my family</h3>
@@ -255,6 +258,30 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            Jack wilson
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="headig-tertiary u-margin-bottom-small">
+                            WOW! My life is completely different now
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, nemo eaque. Temporibus asperiores maxime dicta? Sapiente
+                            ad provident quisquam quam, optio perspiciatis similique quas. Ab aspernatur qui earum sint necessitatibus.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
+            </div>
+
         </section>
     </main>
 </body>
