--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -236,6 +236,13 @@
                 </div>
         </section>
         <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+                        Your brouser is no supported
+                </video>
+            </div>
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     we make people genuinely happy
@@ -281,6 +288,7 @@
             <div class="u-center-text u-margin-top-huge">
                 <a href="#" class="btn-text">Read all stories &rarr;</a>
             </div>
+
 
         </section>
     </main>
