--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text">
                 <h2 class="heading-secondary u-margin-bottom-big">
                     Most popular tours
@@ -186,7 +186,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn--white">book now</a>
+                                <a href="#popup" class="btn btn--white">book now</a>
                             </div>
                         </div>
                     </div>
@@ -373,6 +373,24 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these tearms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error non soluta porro blanditiis voluptatibus dolorem, ut cum, possimus fugit, atque eveniet repudiandae eaque! Ea deleniti, incidunt ratione repudiandae nisi nesciunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque architecto maiores tempora dicta nisi, quisquam quas ducimus perspiciatis, nostrum voluptate repellat ab quaerat totam assumenda ea vel, corporis mollitia esse.
+                </p>
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
